# ComSquare

./: gradle.properties  settings.gradle
.github/workflows/: build_apk.yml  port_to_android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidRenderer.hpp  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/sources/APU/: APU.hpp
app/src/main/cpp/sources/APU/IPL/: IPL.hpp
app/src/main/cpp/sources/Exceptions/: DebuggableError.hpp
app/src/main/cpp/sources/Models/: Vector2.hpp
app/src/main/cpp/sources/PPU/: PPUUtils.hpp
app/src/main/java/com/comsquare/emulator/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap/: ic_launcher.xml
